# FFmpegPlayerDemo

./: README.md
NDKFFmpeg/app/: CMakeLists.txt  build.gradle
NDKFFmpeg/app/src/androidTest/java/com/handsome/ndkffmpeg/: ExampleInstrumentedTest.java
NDKFFmpeg/app/src/main/: AndroidManifest.xml
NDKFFmpeg/app/src/main/cpp/: native-lib.cpp  native-player.cpp  queue.cpp  queue.h
NDKFFmpeg/app/src/main/java/com/handsome/ndkffmpeg/: FFmpegUtils.java  MainActivity.java  VideoView.java
NDKFFmpeg/app/src/main/res/layout/: activity_main.xml
NDKFFmpeg/app/src/main/res/values/: strings.xml
NDKFFmpeg/app/src/test/java/com/handsome/ndkffmpeg/: ExampleUnitTest.java
NDKFFmpeg/gradle/wrapper/: gradle-wrapper.properties
